[package]
name = "rust-p2p-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.42.0"
futures = "0.1.31"
async-std = { version = "1", features = ["attributes", "tokio1"] }
rand = "0.8.5"